--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,8 @@ body {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.35;
-    color: var(--white-color);
     background-color: #2F303A;
+    color: var(--white-color);
     text-transform: uppercase;
 }
 .btn-service {
@@ -139,4 +139,8 @@ body {
     font-style: normal;
     line-height: 1.7;
     color: var(--white-color);
+}
+.container {
+    width: 1200px;
+    margin: 0 auto;
 }
