--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,25 @@
     --general-text-color: #212121;
     --grey-color: #757575;
   }
+h2, h3, p {
+    margin: 0;
+}
 body { 
     font-family: 'Roboto', sans-serif;
     background-color: var(--white-color);
     color: var(--general-text-color);
 }
 /* Header */
-.logo {   
+.header {
+    display: flex;
+    align-items: center;
+}
+.page-header {
+    border-bottom: 1px solid #ECECEC;
+    background-color: var(--white-color);
+    padding: 25px 0;
+}
+.header-logo, .footer-logo {   
     font-weight: 700;
     font-size: 26px;
     line-height:1.2;
@@ -18,6 +30,10 @@ body {
     color: var(--active-color);
     text-decoration: none;
 }
+.header-nav {
+    flex: auto;
+}
+
 .logo-web {
     color: var(--general-text-color);
 }
@@ -26,6 +42,17 @@ body {
 }
 .list {
     list-style: none;
+    display: flex;
+    align-items: center;
+    padding-left: 0;
+    margin: 0;
+}
+.nav-list {
+    padding-left: 93px;
+}
+.header-contact-item:not(:first-child),
+.nav-list-item:not(:first-child) {
+    margin-left: 50px;
 }
 .nav-link {
     font-weight: 500;
@@ -50,13 +77,24 @@ body {
     color: var(--active-color);
 }
 /* Main */
+.service-section {
+    background-color: #2F303A;
+}
+.service-wrapper {
+    text-align: center;
+    padding: 106px 252px;
+}
 .title-service {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.35;
-    background-color: #2F303A;
     color: var(--white-color);
     text-transform: uppercase;
+    padding: 0 30px;
+    margin: 0;
+}
+.button-list {
+    justify-content: center;  
 }
 .btn-service {
     color: var(--white-color);
@@ -65,20 +103,34 @@ body {
     font-weight: 700;
     font-size: 16px;
     font-family: inherit;
-    line-height: 1.875;   
+    line-height: 1.875;
+    margin-top: 30px;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 32px;   
 }
 .btn-filter {
     color: var(--general-text-color);
+    background-color: #F5F4FA;
     cursor: pointer;
     font-weight: 500;
     font-size: 16px;
     font-family: inherit;
     line-height: 1.625;
+    border: none;
+    border-radius: 4px;
+    padding: 6px 22px;
+}
+.button-list-item:not(:first-child) {
+    margin-left: 8px;
 }
 .btn-filter:hover,
 .btn-filter:focus {
     color: var(--white-color);
     background-color: var(--active-color);
+}
+.quaility-wrapper {
+    display: flex;
 }
 .title-quaility {
     font-weight: 700;
@@ -92,46 +144,91 @@ body {
     font-size: 18px;
     line-height: 2;
     color: var(--general-text-color);
+    margin-top: 20px;
+    padding: 0 24px;
+}
+.project-list {
+    flex-wrap: wrap;
+    gap: 40px;
+    padding-top: 50px;
+    /* justify-content: space-between; */
+}
+.project-item {
+    border: 1px solid #EEEEEE;
+    background-color: var(--white-color);
 }
 .portfolio-category {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.875;
     color: var(--grey-color);
+    margin-top: 4px;
+    padding: 0 24px 20px 24px;
 }
 .quaility-description {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     color: var(--grey-color);
+    margin: 10px 0 0 0;
+}
+.quaility-list {
+    justify-content: space-between;
+}
+.work-section {
+    padding-top: 0 !important;
 }
 .box-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.15;
     color: var(--general-text-color);
+    text-align: center;
+}
+.work-list {
+    margin-top: 50px;
+    justify-content: space-between;
+}
+.team-section {
+    background-color: #F5F4FA;
 }
 .team-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.15;
     color: var(--general-text-color);
+    text-align: center;
+}
+.team-list {
+    margin-top: 50px;
+    justify-content: space-between;
 }
 .team-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
     color: var(--general-text-color);
+    margin-top: 30px;
+}
+.team-list-item {
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: var(--white-color);
+    text-align: center;
+    padding-bottom: 30px;
+    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12);
 }
 .team-position {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
     color: var(--grey-color);
+    margin-top: 10px;
 }
 /* footer */
 .footer {
     background-color: #2F303A;
+    padding: 60px 0;
 }
 .address {
     font-weight: 400;
@@ -139,8 +236,22 @@ body {
     font-style: normal;
     line-height: 1.7;
     color: var(--white-color);
+    margin-top: 20px;
+}
+.footer-contact {
+    list-style: none;
+    padding: 0;
+    margin: 9px 0 0 0;
+}
+.footer-contact-item:not(:first-child) {
+    margin-top: 9px;
 }
 .container {
     width: 1200px;
     margin: 0 auto;
 }
+.section {
+    padding: 94px 0px;
+}
+
+
