--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ body {
     line-height: 1.7;
     color: var(--grey-color);
     margin: 10px 0 0 0;
+    letter-spacing: 0.03em;
 }
 /* .quaility-list {
     justify-content: space-between;
